[package]
name = "miro_cw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
axum-typed-websockets = "0.6.0"
diesel = { version = "2.2.2", features = ["postgres"] }
dotenvy = "0.15.7"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "serde", "macro-diagnostics"] }
